// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PrevPage with all props 1`] = `
<div
  className="prevPage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="Route!"
  >
    <p
      className="prevPage__text"
    >
      ← 
      Text!
    </p>
  </NavLink>
</div>
`;

exports[`Render PrevPage with no props 1`] = `
<div
  className="prevPage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/"
  >
    <p
      className="prevPage__text"
    >
      ← 
    </p>
  </NavLink>
</div>
`;

exports[`Render PrevPage with route 1`] = `
<div
  className="prevPage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="Route!"
  >
    <p
      className="prevPage__text"
    >
      ← 
    </p>
  </NavLink>
</div>
`;

exports[`Render PrevPage with text 1`] = `
<div
  className="prevPage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/"
  >
    <p
      className="prevPage__text"
    >
      ← 
      Text!
    </p>
  </NavLink>
</div>
`;
